[package]
name = "ripdpi-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arc-swap = { workspace = true }
ripdpi-config = { workspace = true }
ripdpi-desync = { workspace = true }
ripdpi-packets = { workspace = true }
ripdpi-session = { workspace = true }
tracing = { workspace = true }
mio = { workspace = true }
ripdpi-dns-resolver = { workspace = true }
ripdpi-failure-classifier = { workspace = true }
ripdpi-proxy-config = { workspace = true }
ripdpi-ws-tunnel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ring = { workspace = true }
socket2 = { workspace = true }
libc = { workspace = true }
loom = { workspace = true, optional = true }
nix = { workspace = true }

[features]
loom = ["dep:loom"]

[dev-dependencies]
aes = { workspace = true }
ripdpi-config = { workspace = true }
ripdpi-packets = { workspace = true }
ring = { workspace = true }
local-network-fixture = { workspace = true }
native-soak-support = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
