[package]
name = "ripdpi-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arc-swap = { workspace = true }
base64 = { workspace = true }
ripdpi-config = { workspace = true }
ripdpi-desync = { workspace = true }
ripdpi-packets = { workspace = true }
ripdpi-ipfrag = { workspace = true }
ripdpi-session = { workspace = true }
metrics = { workspace = true }
tracing = { workspace = true }
mio = { workspace = true }
ripdpi-dns-resolver = { workspace = true }
ripdpi-failure-classifier = { workspace = true }
ripdpi-proxy-config = { workspace = true }
ripdpi-ws-tunnel = { workspace = true }
ripdpi-native-protect = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ring = { workspace = true }
socket2 = { workspace = true }
libc = { workspace = true }
etherparse = { workspace = true }
loom = { workspace = true, optional = true }
nix = { workspace = true }
ripdpi-io-uring = { workspace = true, optional = true }

[features]
loom = ["dep:loom"]
io-uring = ["dep:ripdpi-io-uring"]

[dev-dependencies]
aes = { workspace = true }
base64 = { workspace = true }
ctr = "0.9"
ripdpi-config = { workspace = true }
ripdpi-packets = { workspace = true }
ring = { workspace = true }
local-network-fixture = { workspace = true }
native-soak-support = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.27"
