[package]
name = "ripdpi-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
hdrhistogram = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
